Revision history for Perl module Lingua::EN::Syllable

0.26 2014-06-10
    - Switched to Dist::Zilla
    - Added Changes file

0.251 1999-02-04 GREGFAST
    - First version released to CPAN
